--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ doctest = false
 # See https://matklad.github.io/2021/02/27/delete-cargo-integration-tests.html
 test = false
 
-
 [dependencies]
+
+[dev-dependencies]
 sort_test_tools = { git = "https://github.com/Voultapher/sort-research-rs" }
