--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,13 +38,18 @@ jobs:
           toolchain: nightly
           override: true
           components: miri
+    - name: Get number of CPU cores
+      uses: SimenB/github-actions-cpu-cores@v1
+      id: cpu-cores
+    - name: Install cargo-nextest
+      run: |
+        cargo install cargo-nextest
     - name: Run tests x86_64-unknown-linux-gnu (little-endian)
       run: |
-        cargo miri test --verbose --target x86_64-unknown-linux-gnu
+        cargo miri nextest run --verbose --target x86_64-unknown-linux-gnu -j${{ steps.cpu-cores.outputs.count }}
     - name: Run tests mips64-unknown-linux-gnuabi64 (big-endian)
       run: |
-        cargo miri test --verbose --target mips64-unknown-linux-gnuabi64 random_z1
-  
+        cargo miri nextest run --verbose --target mips64-unknown-linux-gnuabi64 -j${{ steps.cpu-cores.outputs.count }}  
   asan:
     runs-on: ubuntu-latest
     
