--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,11 +18,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install latest nightly
-        uses: actions-rs/toolchain@v1
-        with:
-            toolchain: nightly
-            override: true
-            # components: rustfmt, clippy
+      uses: actions-rs/toolchain@v1
+      with:
+          toolchain: nightly
+          override: true
     - name: Build
       run: cargo build --verbose
     - name: Run tests
@@ -34,33 +33,35 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install latest nightly
-        uses: actions-rs/toolchain@v1
-        with:
-            toolchain: nightly
-            override: true
-            components: miri
-    - name: Run tests x86_64-unknown-linux-gnu
+      uses: actions-rs/toolchain@v1
+      with:
+          toolchain: nightly
+          override: true
+          components: miri, rust-src
+    - name: Install cargo-nextest
       run: |
-        cargo miri test --verbose --target x86_64-unknown-linux-gnu
-    - name: Run tests mips64-unknown-linux-gnuabi64
+        curl -LsSf https://get.nexte.st/latest/linux | tar zxf - -C ${CARGO_HOME:-~/.cargo}/bin
+    - name: Run tests x86_64-unknown-linux-gnu (little-endian)
       run: |
-        cargo miri test --verbose --target mips64-unknown-linux-gnuabi64
-  
+        cargo miri nextest run --verbose --target x86_64-unknown-linux-gnu -j4
+    - name: Run tests mips64-unknown-linux-gnuabi64 (big-endian)
+      run: |
+        cargo miri test --verbose --target mips64-unknown-linux-gnuabi64 random_z1
   asan:
     runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v2
     - name: Install latest nightly
-        uses: actions-rs/toolchain@v1
-        with:
-            toolchain: nightly
-            override: true
-            components: rustfmt, clippy
-    - name: Build
-      run: RUSTFLAGS=-Zsanitizer=address cargo build --release
-    - name: Run tests (TODO loop)
-      run: RUSTFLAGS=-Zsanitizer=address cargo test --release
+      uses: actions-rs/toolchain@v1
+      with:
+          toolchain: nightly
+          override: true
+          components: rustfmt, clippy
+    - name: Run tests 
+      run: bash -c "for i in {0..100}; do RUSTFLAGS=-Zsanitizer=address cargo test --no-default-features --release; done"
+    - name: Run tests with large test sizes
+      run: bash -c "for i in {0..2}; do RUSTFLAGS=-Zsanitizer=address cargo test --release; done"
 
   lint:
     runs-on: ubuntu-latest
@@ -68,11 +69,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install latest nightly
-        uses: actions-rs/toolchain@v1
-        with:
-            toolchain: nightly
-            override: true
-            components: rustfmt
+      uses: actions-rs/toolchain@v1
+      with:
+          toolchain: nightly
+          override: true
+          components: rustfmt
     - name: Check rustfmt
       run: cargo fmt --check
       # TODO clippy?
