--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ test = false
 [dependencies]
 
 [dev-dependencies]
-sort_test_tools = { git = "https://github.com/Voultapher/sort-research-rs", default-features = false }
+sort_test_tools = { git = "https://github.com/Voultapher/sort-research-rs", rev = "557a8b75da48d40c8dcacef2dc0082bee9af7ba5", default-features = false }
 
 [features]
 default = ["large_test_sizes"]
