--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,6 +26,10 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Build compile_time_impact
+      run: |
+        cd benchmarks/compile_time_impact
+        cargo build
 
   miri:
     runs-on: ubuntu-latest
