--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,9 +1,7 @@
 name: Test
 
 on:
-  push:
   pull_request:
-    types: [opened, reopened]
 
 jobs:
   debug:
@@ -26,6 +24,10 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Build compile_time_impact
+      run: |
+        cd benchmarks/compile_time_impact
+        cargo build
 
   miri:
     runs-on: ubuntu-latest
